# ConfRobber

./: .gitignore  ConfRobber.go  README.md  build.bat
src/cf/: attributes.go  block.go  cf.go  cf_test.go  header.go
src/ib/: connection.go  ib.go  ib_test.go
src/utils/: bs.go  bs_test.go  compressor.go  conv.go  fs.go  logger.go
src/zlibwrapper/: CMakeLists.txt  ReadMe.txt  build.bat  build_C_lib.bat  go_install1.5.bat  replace_text.bat  zlibwrapper.cpp  zlibwrapper.go  zlibwrapper.hpp  zlibwrapper.i  zlibwrapper_test.go
